# patern_c_plus_plus

./: CMakeLists.txt  README.md
task_1/: Group.cpp  Group.h  Observer.cpp  Observer.h  User.cpp  User.h  task_1.cpp
task_2/: TypeList.hpp  task_2.cpp
task_3/: TypeMap.hpp  task_3.cpp
task_4/: lcs.hpp
task_5/: Log.h
task_6/: task_6.cpp
task_7/: task_7.cpp
task_8/: task_8.cpp
